migrate generate to the last version

--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/MetaClassTemplate2.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/MetaClassTemplate2.vm
@@ -2,45 +2,67 @@
 package ${classDeclaration.pack}.meta;
 
 import org.kevoree.modeling.api.abs.AbstractMetaAttribute;
-import org.kevoree.modeling.api.abs.AbstractMetaClass;
 import org.kevoree.modeling.api.abs.AbstractMetaOperation;
 import org.kevoree.modeling.api.abs.AbstractMetaReference;
 import org.kevoree.modeling.api.extrapolation.DiscreteExtrapolation;
 import org.kevoree.modeling.api.meta.*;
 
-public class MetaNode extends AbstractMetaClass {
+public class Meta${classDeclaration.name} extends org.kevoree.modeling.api.abs.AbstractMetaClass {
 
-public static MetaNode build(MetaModel p_origin) {
-return new MetaNode(p_origin);
+public static Meta${classDeclaration.name} build(org.kevoree.modeling.api.meta.MetaModel p_origin) {
+    return new Meta${classDeclaration.name}(p_origin);
 }
 
-public final MetaAttribute ATT_NAME;
+#foreach($attribute in $classDeclaration.attributes)
+    public final org.kevoree.modeling.api.meta.MetaAttribute ATT_${attribute.name.toUpperCase()};
+#end
 
-public final MetaAttribute ATT_VALUE;
+#foreach($reference in $classDeclaration.references)
+    public final org.kevoree.modeling.api.meta.MetaReference REF_${reference.name.toUpperCase()};
+#end
 
-public final MetaReference REF_CHILDREN;
+#foreach($operation in $classDeclaration.operations)
+    public final org.kevoree.modeling.api.meta.MetaOperation OP_${operation.name.toUpperCase()};
+#end
 
-public final MetaReference REF_ELEMENT;
+    private Meta${classDeclaration.name}(org.kevoree.modeling.api.meta.MetaModel p_origin) {
+        super("${classDeclaration.fqn}", 0, p_origin);
 
-public final MetaOperation OP_TRIGGER;
+        org.kevoree.modeling.api.meta.MetaAttribute[] temp_attributes = new org.kevoree.modeling.api.meta.MetaAttribute[${classDeclaration.attributes.size()}];
+        #set($attributeI = 0)
+        #foreach($attribute in $classDeclaration.attributes)
+            #if($attribute.learned)
 
-private MetaNode(MetaModel p_origin) {
-super("org.kevoree.modeling.microframework.test.cloud.Node", 0, p_origin);
-ATT_NAME = new AbstractMetaAttribute("name", 5, 5, true, MetaType.STRING, DiscreteExtrapolation.instance(), this);
-ATT_VALUE = new AbstractMetaAttribute("value", 6, 5, false, MetaType.STRING, DiscreteExtrapolation.instance(), this);
-MetaAttribute[] temp_attributes = new MetaAttribute[2];
-temp_attributes[0] = ATT_NAME;
-temp_attributes[1] = ATT_VALUE;
-REF_CHILDREN = new AbstractMetaReference("children", 7, true, false, null, null, null, this);
-REF_ELEMENT = new AbstractMetaReference("element", 8, true, true, null, null, null, this);
-MetaReference[] temp_references = new MetaReference[2];
-temp_references[0] = REF_CHILDREN;
-temp_references[1] = REF_ELEMENT;
-OP_TRIGGER = new AbstractMetaOperation("trigger", 9, this);
-MetaOperation[] temp_operations = new MetaOperation[1];
-temp_operations[0] = OP_TRIGGER;
-init(temp_attributes, temp_references, temp_operations);
-}
+            ATT_${attribute.name.toUpperCase()} = new AbstractMetaAttribute("${attribute.name}", 5, #if($context.generationContext.helper.isNull(${attribute.precision}))0#{else}$attribute.precision#end, #if($attribute.id)true#{else}false#end, org.kevoree.modeling.api.meta.MetaType.$attribute.type.toUpperCase(), PolynomialExtrapolation.instance(), this);
+            #else
+
+            ATT_${attribute.name.toUpperCase()} = new AbstractMetaAttribute("${attribute.name}", 5, 0, #if($attribute.id)true#{else}false#end, org.kevoree.modeling.api.meta.MetaType.$attribute.type.toUpperCase(), DiscreteExtrapolation.instance(), this);
+            #end
+
+            temp_attributes[${attributeI}] = ATT_${attribute.name.toUpperCase()};
+
+            #set($attributeI = $attributeI +1)
+        #end
+
+        org.kevoree.modeling.api.meta.MetaReference[] temp_references = new org.kevoree.modeling.api.meta.MetaReference[${classDeclaration.references.size()}];
+        #set($referenceI = 0)
+        #foreach($reference in $classDeclaration.references)
+
+        REF_${reference.name.toUpperCase()} = new AbstractMetaAttribute("${reference.name}", 5, ${attribute.precision}, true, MetaType.STRING, DiscreteExtrapolation.instance(), this);
+        temp_references[${referenceI}] = REF_${reference.name.toUpperCase()};
+            #set($attributeI = $attributeI +1)
+        #end
+
+        org.kevoree.modeling.api.meta.MetaOperation[] temp_operations = new org.kevoree.modeling.api.meta.MetaOperation[${classDeclaration.operations.size()}];
+        #set($operationI = 0)
+        #foreach($operation in $classDeclaration.operations)
+        OP_${operation.name.toUpperCase()} = new AbstractMetaOperation("trigger", 9, this);
+        temp_operations[${referenceI}] = OP_${operation.name.toUpperCase()};
+            #set($operationI = $operationI +1)
+        #end
+
+        init(temp_attributes, temp_references, temp_operations);
+    }
 
 }
 #* @vtlvariable name="context" type="org.kevoree.modeling.generator.ClassGenerationContext" *#
