--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/ClassImplTemplate.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/ClassImplTemplate.vm
@@ -65,7 +65,7 @@ public class ${classDeclaration.name}Impl extends org.kevoree.modeling.api.abs.A
 
     @Override
     public ${classDeclaration.pack}.${classDeclaration.name} remove${context.generationContext.helper.toCamelCase(${ref.getName()})}(${ref.getType().fqn} p_obj) {
-        mutate(org.kevoree.modeling.api.KActionType.REMOVE, metaClass().REF_${ref.getName().toUpperCase()}, p_obj, true);
+        mutate(org.kevoree.modeling.api.KActionType.REMOVE, metaClass().REF_${ref.getName().toUpperCase()}, p_obj);
         return this;
     }
 
