--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/UniverseTemplate.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/UniverseTemplate.vm
@@ -6,12 +6,12 @@ public class ${context.metaModelName}Universe extends org.kevoree.modeling.api.a
 
     #foreach($class in $context.model.classifiers)
 
-    public final ${class.pack}.Meta${class.name} META_${class.fqn.toUpperCase().replace(".","_")};
+    public final ${class.pack}.meta.Meta${class.name} META_${class.fqn.toUpperCase().replace(".","_")};
     #end
 
     public ${context.metaModelName}Universe() {
         super();
-        _metaModel = new AbstractMetaModel("${context.metaModelName}", -1);
+        _metaModel = new org.kevoree.modeling.api.abs.AbstractMetaModel("${context.metaModelName}", -1);
         org.kevoree.modeling.api.meta.MetaClass[] tempMetaClasses = new org.kevoree.modeling.api.meta.MetaClass[${context.model.classifiers.size()}];
         #foreach($class in $context.model.classifiers)
 
@@ -24,6 +24,11 @@ public class ${context.metaModelName}Universe extends org.kevoree.modeling.api.a
     @Override
     protected ${context.metaModelName}Dimension internal_create(long key) {
         return new ${context.metaModelName}Dimension(this,key);
+    }
+
+    @Override
+    public org.kevoree.modeling.api.meta.MetaModel metaModel() {
+        return _metaModel;
     }
 }
     
