--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/MetaClassTemplate2.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/MetaClassTemplate2.vm
@@ -39,7 +39,7 @@ public static Meta${classDeclaration.name} build(org.kevoree.modeling.api.meta.M
             #if($context.generationContext.helper.isNull(${reference.opposite}))
             REF_${reference.name.toUpperCase()} = new org.kevoree.modeling.api.abs.AbstractMetaReference("${reference.name}", ${reference.index}, ${reference.contained}, ${reference.single}, ${reference.type.index}, null, null, this);
             #else
-            REF_${reference.name.toUpperCase()} = new org.kevoree.modeling.api.abs.AbstractMetaReference("${reference.name}", ${reference.index}, ${reference.contained}, ${reference.single}, ${reference.type.index}, ${reference.type.index}, ${reference.opposite.refIndex}, this);
+            REF_${reference.name.toUpperCase()} = new org.kevoree.modeling.api.abs.AbstractMetaReference("${reference.name}", ${reference.index}, ${reference.contained}, ${reference.single}, ${reference.type.index}, ${reference.opposite.refIndex}, this);
             #end
 
         temp_references[${reference.refIndex}] = REF_${reference.name.toUpperCase()};
