--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/MetaClassTemplate2.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/MetaClassTemplate2.vm
@@ -37,7 +37,7 @@ public static Meta${classDeclaration.name} build(org.kevoree.modeling.api.meta.M
         #foreach($reference in $classDeclaration.references)
 
             #if($context.generationContext.helper.isNull(${reference.opposite}))
-            REF_${reference.name.toUpperCase()} = new org.kevoree.modeling.api.abs.AbstractMetaReference("${reference.name}", ${reference.index}, ${reference.contained}, ${reference.single}, ${reference.type.index}, null, null, this);
+            REF_${reference.name.toUpperCase()} = new org.kevoree.modeling.api.abs.AbstractMetaReference("${reference.name}", ${reference.index}, ${reference.contained}, ${reference.single}, ${reference.type.index}, null, this);
             #else
             REF_${reference.name.toUpperCase()} = new org.kevoree.modeling.api.abs.AbstractMetaReference("${reference.name}", ${reference.index}, ${reference.contained}, ${reference.single}, ${reference.type.index}, ${reference.opposite.refIndex}, this);
             #end
