--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/DimensionTemplate.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/DimensionTemplate.vm
@@ -8,7 +8,7 @@ public class ${context.metaModelName}Dimension extends org.kevoree.modeling.api.
 
     @Override
     protected ${context.metaModelName}View internal_create(Long timePoint) {
-        return new ${context.metaModelPackage}.impl.${context.metaModelName}ViewImpl(timePoint,this);
+        return new ${context.metaModelPackage}.impl.${context.metaModelName}ViewImpl(timePoint,(org.kevoree.modeling.api.abs.AbstractKDimension)this);
     }
 
 }
