fix all tests and generaition using static API drop Meta static API, useless and dangerous in case of JS generation

--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/ClassTemplate.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/ClassTemplate.vm
@@ -1,7 +1,7 @@
 #set($classDeclaration = $context.classDeclaration)
-package $classDeclaration.pack;
+package ${classDeclaration.pack};
 
-public interface $classDeclaration.name extends org.kevoree.modeling.api.KObject#foreach($parent in $classDeclaration.parents), $parent.getFqn()#end {
+public interface ${classDeclaration.name} extends org.kevoree.modeling.api.KObject#foreach($parent in $classDeclaration.parents), $parent.getFqn()#end {
 
 #foreach($attribute in $classDeclaration.attributes)
 #if($attribute.single)
