--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/UniverseTemplate.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/UniverseTemplate.vm
@@ -4,19 +4,12 @@ public class ${context.metaModelName}Universe extends org.kevoree.modeling.api.a
 
     private org.kevoree.modeling.api.meta.MetaModel _metaModel;
 
-    #foreach($class in $context.model.classifiers)
-
-    public final ${class.pack}.meta.Meta${class.name} META_${class.fqn.toUpperCase().replace(".","_")};
-    #end
-
     public ${context.metaModelName}Universe() {
         super();
         _metaModel = new org.kevoree.modeling.api.abs.AbstractMetaModel("${context.metaModelName}", -1);
         org.kevoree.modeling.api.meta.MetaClass[] tempMetaClasses = new org.kevoree.modeling.api.meta.MetaClass[${context.model.classifiers.size()}];
         #foreach($class in $context.model.classifiers)
-
-        META_${class.fqn.toUpperCase().replace(".","_")} = ${class.pack}.meta.Meta${class.name}.build(_metaModel);
-        tempMetaClasses[${class.index}] = (org.kevoree.modeling.api.meta.MetaClass)META_${class.fqn.toUpperCase().replace(".","_")};
+            tempMetaClasses[${class.index}] = ${class.pack}.meta.Meta${class.name}.getInstance();
         #end
         ((org.kevoree.modeling.api.abs.AbstractMetaModel) _metaModel).init(tempMetaClasses);
     }
